--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">IStation</string>
+    <string name="middle_lorem_ipsum">The only empress in the empire.👑👑 \nA princess .\n😍😍😍 Tech Lover \nSmile is perfect</string>
 </resources>
